# WebGui

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  main.cpp
src/: CMakeLists.txt  editor.cpp  editor.h  main.cpp
